[migration 9] Docker images on Temurin 21, and two defects the rebuild exposed
docker/core/Dockerfile was ubuntu:16.04 + `apt-get install wget openjdk-8-jre
nginx`. It is now eclipse-temurin:21-jre-jammy with no apt-get layer at all: the
base image already carries tar, gzip, curl and wget, and the nginx was installed
but never configured or started in any commit since 2021 (Decision B - the
capability is documented in docker/README.md as a job for a reverse-proxy
container instead). NGB_JAVA_OPTS carries --enable-native-access=ALL-UNNAMED,
without which every start prints three warnings about restricted
java.lang.foreign calls from Lucene's MMapDirectory.

Running the images found two bugs that predate this phase, both caused by
UrlValidatorService (Apr 2025) checking ngs.data.root.path against the path of
every locally registered file, not just against the file browser:

  * the core image fixed that root at /ngs in a RUN layer, so
    `docker run -e NGS_DATA_DIR=/data` was a silent no-op and data mounted
    anywhere else could not be registered. The properties file is now written by
    docker/core/entrypoint.sh at every start, from NGS_DATA_DIR, unless the
    operator supplied one.

  * the demo image baked references into /reference and unpacked the demo tarball
    into /, while start-demo.sh registered /opt/data/ngb_demo_data - three path
    conventions, none under /ngs. `ngb reg_ref` answered "Parameter path doesn't
    fall into 'ngs.data.root.path'" to the image's own data. Everything now lives
    under /ngs in both the image and start-demo.sh, which also waits for the
    server to answer before its first CLI call instead of racing a 45-second
    startup.

Also in the demo image: the dead ngb.opensource.epam.com download URLs are
repointed at the ngb-oss-builds bucket start-demo.sh already used; the NGB 2.6.0
index-cache tarball is dropped per D10; and DATA_URL / REFERENCES / DEMO_DATA
build args make it possible to build a subset small enough to actu